Added show and index view.

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Tasks#show</h1>
-<p>Find me in app/views/tasks/show.html.erb</p>
+<h1>My Tasks List</h1>
+
+  <article>
+    <h2> <%= link_to(@mytask[:title]) %></h2>
+      <h3> <%= @mytask[:description] %><h3>
+        <p> <%= @mytask[:completed_at] %></p>
+        <p><%= link_to('Edit', edit_path(@mytask[:id])) %></p>
+        <p><%= link_to('Delete', destroy_path(@mytask[:id])) %></p>
+</article>
