--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<h1>My Tasks List</h1>
+<% @tasks.each do |task|%>
+  <article>
+    <h2> <%= link_to(task[:title], show_path(task[:id])) %>
+      <h3> <%= task[:description] %><h3>
+        <p> <%= task[:completed_at] %></p>
+</article>
+<%end%>
