Added form for new task and link to create a new task

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,5 +4,6 @@
     <h2> <%= link_to(task[:title], show_path(task[:id])) %>
       <h3> <%= task[:description] %><h3>
         <p> <%= task[:completed_at] %></p>
-</article>
-<%end%>
+        </article>
+        <%end%>
+        <p><%= link_to('Add New Task', new_path) %></p>
