--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
+<h1>Create a new Task</h1>
+<form action="show" method="post" accept-charset="utf-8">
+  <label for="title">Name of Task</label>
+  <input type="text" name="title" id="title">
+  <label for="description">Task Description</label>
+  <input type="text" name="description" id="description">
+  <input type="submit" value="Submit">
+</form>
