Added delete button, and added new column'finished'

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Tasks#edit</h1>
-<p>Find me in app/views/tasks/edit.html.erb</p>
+<article>
+  <h2> <%= link_to(@mytask.title) %></h2>
+    <h3> <%= @mytask.description %><h3>
+      <p> <%= @mytask.finished %></p>
+</article>
