Added style to header and footer.

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,17 @@
-<article>
-  <h2> <%= link_to(@mytask.title) %></h2>
-    <h3> <%= @mytask.description %><h3>
-      <p> <%= @mytask.finished %></p>
-</article>
+<h1>Edit a Blog Post</h1>
+<form name="edit-post" action="update" method="post">
+  <input type="hidden" name="_method" value="PUT">
+<label for="title">Title:</label>
+<input type="text" name="title" id="title" value="<%= @mytask[:title] %>">
+
+<label for="description">description</label>
+<textarea id="description" name="description" rows="8" cols="40" ><%= @mytask[:description]%></textarea>
+<%= tag(:input, :type => "hidden",
+   :name => request_forgery_protection_token.to_s,
+   :value => form_authenticity_token) %>
+
+   <label for="finished">Task Completed</label>
+   <input type="checkbox" name="finished" id="finished" value="<%= @mytask[:finished] %>">
+
+<button type="submit">Submit</button>
+</form>
