--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,7 @@
   <article>
     <h2> <%= link_to(task.title, show_path(task[:id])) %>
       <h3> <%= task.description %><h3>
-        <p> <%= task.finished %></p>
+        <p><%= button_to 'Delete', {action: "destroy", id: task.id}, method: :delete, data: {confirm: "Are you sure?"} %></p>
         </article>
         <%end%>
-        <p><%= link_to('Add New Task', new_path) %></p>
+        <p class="link"><%= link_to('Add New Task', new_path) %></p>
