--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,20 @@
 <h1>Edit a Blog Post</h1>
-<form name="edit-post" action="update" method="post">
+
+<section>
+<%= form_for @mytask, url: update_path do |f| %>
+<%= f.label :title %>
+<%= f.text_field :title %>
+<%= f.label :description %>
+<%= f.text_area :description %>
+<%= f.label :finished %>
+<%= f.check_box :finished %>
+<%= f.submit %>
+<%end%>
+</section>
+
+
+
+<!-- <form name="edit-post" action="update" method="post">
   <input type="hidden" name="_method" value="PUT">
 <label for="title">Title:</label>
 <input type="text" name="title" id="title" value="<%= @mytask[:title] %>">
@@ -14,4 +29,4 @@
    <input type="checkbox" name="finished" id="finished" value="<%= @mytask[:finished] %>">
 
 <button type="submit">Submit</button>
-</form>
+</form> -->
