--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -6,7 +6,7 @@
 <%= f.text_field :title %>
 <%= f.label :description %>
 <%= f.text_area :description %>
-<%= f.label :finished %>
+<%= f.label :complete %>
 <%= f.check_box :finished %>
 <%= f.submit %>
 <%end%>
