--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,7 +3,12 @@
 <article>
   <h2> <%= link_to(@mytask.title) %></h2>
     <h3> <%= @mytask.description %><h3>
-      <p> <%= @mytask.finished %></p>
+      <%if @mytask.finished
+         status = "Task Complete"
+      else
+      status = "Task Not Complete"
+      end%>
+      <h3> <%= status %><h3>
       <p><%= link_to('Edit', edit_path(@mytask.id)) %></p>
       <p><%= button_to 'Delete', {action: "destroy", id: @mytask.id}, method: :delete, data: {confirm: "Are you sure?"} %></p>
 </article>
